--- a/app/templates/flay_layout.html
+++ b/app/templates/flay_layout.html
@@ -35,10 +35,10 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="/about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" href="/all">Browse Recipes</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
