--- a/app/templates/recipe_content.html
+++ b/app/templates/recipe_content.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="container-lg center-container">
+<div class="container-lg center-container opaque-container">
   <br>
   <div class="card w-100 h-100" style="width: 18rem;">
     <div class="card-body">
