--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -77,7 +77,7 @@
        </div>
         <div class="col-md-4">
           <h2>Kubernetes</h2>
-          <p>This project contains yaml files for a kubernetes deployment. Why use three orchestration tools platforms? To show off.</p>
+          <p>This project contains yaml files for a kubernetes deployment. Why use three orchestration platforms? To show off.</p>
           <img width="320" src="{{ url_for('static', filename='img/kubernetes.png') }}" alt="My technology stack">
         </div>
 
