--- a/app/templates/recipe_content.html
+++ b/app/templates/recipe_content.html
@@ -4,7 +4,7 @@
 
 <div class="container-lg center-container opaque-container">
   <br>
-  <div class="card w-100 h-100" style="width: 18rem;">
+  <div class="card w-100" style="width: 18rem;">
     <div class="card-body">
       <h3 class="card-title">{{ result[0]['name'] }}</h5>
 
