--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,6 +16,9 @@
   <!-- Custom styles for this template -->
   <link href="{{ url_for('static', filename='css/the-big-picture.css') }}" rel="stylesheet">
 
+  <!-- Utility functions -->
+  <script src="{{ url_for('static', filename='js/func_util.js') }}"></script>
+
 </head>
 
 <body>
@@ -58,11 +61,11 @@
           <div class="form-row">
             <div class="col">
               <label for="recipe">Recipe:</label>
-              <input type="text" id="recipe" name="recipe" class="form-control search-bar" value="Recipe names i.e. chili">
+              <input type="text" id="recipe" name="recipe" class="form-control search-bar" value="Recipe names i.e. chili" onclick="clearRecipe()">
             </div>
             <div class="col">
               <label for="ingredient">Ingredient:</label>
-              <input type="text" id="ingredient" name="ingredient" class="form-control search-bar" value="Ingredients i.e. tomato">
+              <input type="text" id="ingredient" name="ingredient" class="form-control search-bar" value="Ingredients i.e. tomato" onclick="clearIngredient()">
             </div>
             <input id="submit" class="btn btn-primary transparent" type="submit"></input>
           </div>
