--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -67,7 +67,7 @@
               <label for="ingredient">Ingredient:</label>
               <input type="text" id="ingredient" name="ingredient" class="form-control search-bar" value="Ingredients i.e. tomato" onclick="clearIngredient()">
             </div>
-            <input id="submit" class="btn btn-primary transparent" type="submit"></input>
+            <input id="submit" class="btn btn-primary transparent" type="submit" value="Search"></input>
           </div>
           </form>
         </div>
