Fixed pagination for search results page. Added functionality for saving of latest query in session.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -57,7 +57,7 @@
           <h1 class="mt-5">Welcome to Flay</h1>
           <p>Flay helps you cook by putting 23,000 plus recipes at your fingertips. Flay provides a variety of curated recipes. Search by ingredients or recipe name.</p>
           <!-- Search form -->
-          <form method="POST" action="/results">
+          <form method="POST" action="/results/0">
           <div class="form-row">
             <div class="col">
               <label for="recipe">Recipe:</label>
