--- a/app/templates/results_content.html
+++ b/app/templates/results_content.html
@@ -23,9 +23,9 @@
     {% endfor %}
   </ul>
   {% if skip != 0 %}
-  <a class="btn btn-primary" href="/all/{{ skip-100 }}" role="button">Previous 100</a>
+  <a class="btn btn-primary" href="/{{ mode }}/{{ skip-100 }}" role="button">Previous 100</a>
   {% endif %}
-  <a class="btn btn-primary btn-right" href="/all/{{ skip+100 }}" role="button">Next 100</a>
+  <a class="btn btn-primary btn-right" href="/{{ mode }}/{{ skip+100 }}" role="button">Next 100</a>
 </div>
 
 {% endblock content %}
