Added centered image for woks of life recipes, added capitalization for kaggle recipes, fixed a bug with previous button

--- a/app/static/css/the-big-picture.css
+++ b/app/static/css/the-big-picture.css
@@ -47,6 +47,13 @@ label[for="ingredient"]
   float: right;
 }
 
+.center-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;  
+}
+
 .opaque-container {
   opacity: 0.8;
 }
