--- a/app/templates/recipe_content.html
+++ b/app/templates/recipe_content.html
@@ -2,33 +2,38 @@
 
 {% block content %}
 
-<div class="container-lg center-container opaque-container">
+<div class="container-lg center-container">
   <br>
   <div class="card w-100" style="width: 18rem;">
     <div class="card-body">
-      <h3 class="card-title">{{ result['name'] }}</h5>
-
-      <h5 class="card-subtitle mb-2 text-muted header-padding">Ingredients</h6>
+      <h3 class="card-title">{{ result['name'] }}</h3>
+      {% if result['image'] is defined %}
+      <img class="center-image" src="{{ result['image'] }}"></img>
+      {% endif %}
+      <h5 class="card-subtitle mb-2 text-muted header-padding">Ingredients</h5>
       <ul class="list-group list-group-flush">
         {% for ingredient in result['ingredients'] %}
           <li class="list-group-item">{{ ingredient }}</li>
         {% endfor %}
       </ul>
 
-      <h5 class="card-subtitle mb-2 text-muted header-padding">Directions</h6>
+      <h5 class="card-subtitle mb-2 text-muted header-padding">Directions</h5>
       <ul class="list-group list-group-flush">
         {% for step in result['steps'] %}
           <li class="list-group-item">{{ step }}</li>
         {% endfor %}
       </ul>
 
-      <h5 class="card-subtitle mb-2 text-muted header-padding">Tags</h6>
+      <h5 class="card-subtitle mb-2 text-muted header-padding">Tags</h5>
       <p class="card-text">
         {% for tag in result['tags'] %}
           {{ tag }}
           {{ "," if not loop.last }}                 
         {% endfor %}        
       </p>
+      {% if result['recipeURL'] is defined %}
+      <a href="{{ result['recipeURL'] }}" class="card-link">Recipe Link</a>
+      {% endif %}
       <a href="https://www.allrecipes.com/search/results/?wt={{ result['name']|replace(' ', '%20') }}&sort=re" class="card-link">All Recipes</a>
       <a href="https://www.foodnetwork.com/search/{{ result['name']|replace(' ', '-') }}-" class="card-link">Food Network</a>
     </div>
