Added test route, new to dos, a method to clear default values in form, mobile responsive layouts, a search icon button, and a test page

--- a/app/static/css/the-big-picture.css
+++ b/app/static/css/the-big-picture.css
@@ -75,3 +75,12 @@ label[for="ingredient"]
   text-align: center;
 }
 
+.fabutton {
+  background: none;
+  padding: 0px;
+  border: none;
+}
+
+.icon-search {
+  padding: 5px;
+}
