--- a/app/templates/test_page.html
+++ b/app/templates/test_page.html
@@ -16,7 +16,8 @@
   <!-- Custom styles for this template -->
   <link href="../static/css/the-big-picture.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -66,8 +67,8 @@
               <div class="col">
                 <input type="text" class="form-control search-bar" placeholder="Ingredients">
               </div>
-              <button type="submit" class="btn btn-success transparent">
-                <span class="material-icons">search</span>
+              <button type="submit" id="completed-task" class="fabutton">
+                    <i class="fa fa-search"></i>
               </button>
             </div>
           </form>          
